changed index and added stylesheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Free hosting from github, niggaaa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Hanni Abu</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+<body>
+	<div id="header"></div>
+	<div id="div1"></div>
+	<div id="div2"></div>
+	<div id="div3"></div>
+	
+</body>
+</html>
