--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="header"></div>
-	<div id="div1"></div>
+	<div id="footer"></div>
 	<div id="div2"></div>
 	<div id="div3"></div>
 	
