--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="wrapper">
 	<div id="header">
 		<h1><br> </h1>
-		<h2><strong class="sep-one"></strong>Coming Soon<strong class="sep-two"></strong></h2>
+		<h2><strong class="sep-one"></strong>Portfolio Coming Soon<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
 		<p>My name is <span><strong>Hanni Abukhater</strong></span>, and I am an aspiring front-end developer.</p>
