--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Coming Soon</title>
-<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="tools/jquery.min.js"></script> 
-<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
-<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Hanni Abu // Developer</title>
+		<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
+		<script type="text/javascript" src="tools/jquery.min.js"></script> 
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+		<link rel="icon" type="image/png" href="images/ha-logo.png" />
+		<!-- <link rel="icon" type="image/ico" href="images/ha-logo.ico" /> -->
 
 </head>
 <body>
@@ -20,15 +22,18 @@
 		<p>My name is <span><strong>Hanni Abukhater</strong></span>, and I am an aspiring front-end developer.</p>
 	</div>
 	<div id="footer">
+		<!-- <div id="email">hanniabu@gmail.com</div>	 -->
 		<div>
-		<h2><br><br><br><br><br><br>hanniabu@gmail.com</h2>
-		<ul class="social">
-			<!-- <li class="facebook"><a href="#"></li>
+		<a class="button" href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
+		<h2><br><br>hanniabu@gmail.com</h2>
+		<!-- <ul class="social">
+			<li class="facebook"><a href="#"></li>
 			<li class="twitter"><a href="#"></li>
-			<li class="youtube"><a href="#"></li> -->
-		</ul>
+			<li class="youtube"><a href="#"></li>
+		</ul> -->
 		</div>
 	</div>
 </div>
+
 </body>
 </html>
