added transparent background to icon, made resume download button padding based off percent

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="tools/jquery.min.js"></script> 
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
-		<link rel="icon" type="image/png" href="images/ha-logo.png" />
+		<link rel="icon" type="image/gif" href="images/ha-logo.gif" />
 		<!-- <link rel="icon" type="image/ico" href="images/ha-logo.ico" /> -->
 
 </head>
