--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
 		<title>Hanni Abu // Developer</title>
 		<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
 		<script type="text/javascript" src="tools/jquery.min.js"></script> 
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 		<link rel="icon" type="image/gif" href="images/ha-logo.gif" />
-		<!-- <link rel="icon" type="image/ico" href="images/ha-logo.ico" /> -->
+
+		<meta charset="utf-8">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> -->
+        <meta name="description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta name="author" content="Hanni Abukhater">
+		<meta name="robots" content="index,follow,archive">
+        <meta property="og:locale" content="en_us">
+        <meta property="og:title" content="Hanni Abukhater">
+        <meta property="og:url" content="index.html">
+        <meta property="og:site_name" content="Hanni Abu // Developer">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta property="og:image" content="images/ha-logo.gif">
+        <!-- <meta property="fb:admins" content="100000472617627">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@">
+        <meta name="twitter:creator" content="@"> -->
+        <meta name="twitter:url" content="index.html">
+        <meta name="twitter:title" content="Hanni Abu // Developer">
+        <meta name="twitter:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta name="twitter:image" content="images/ha-logo.gif">
 </head>
 <body>
 <div class="black"></div>
@@ -18,10 +38,9 @@
 		<h2><strong class="sep-one"></strong>Portfolio Coming Soon<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>My name is <span><strong>Hanni Abukhater</strong></span>, and I am an aspiring front-end developer.</p>
+		<p>My name is <span><strong>Hanni Abukhater</strong></span>.</p><p>I am a developer in Clifton, New Jersey.</p>
 	</div>
 	<div id="footer">
-		<!-- <div id="email">hanniabu@gmail.com</div>	 -->
 		<div>
 		<a class="button" href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
 		<h2><br><br>hanniabu@gmail.com</h2>
