updated link content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="author" content="Hanni Abukhater">
 		<meta name="robots" content="index,follow,archive">
         <meta property="og:locale" content="en_us">
-        <meta property="og:title" content="Hanni Abukhater">
+        <meta property="og:title" content="Hanni Abu // Developer">
         <meta property="og:url" content="index.html">
         <meta property="og:site_name" content="Hanni Abu // Developer">
         <meta property="og:type" content="website">
