updated content images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta property="og:site_name" content="Hanni Abu // Developer">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
-        <meta property="og:image" content="images/ha-logo.gif">
+        <meta property="og:image" content="images/ha-logo.png">
         <!-- <meta property="fb:admins" content="100000472617627">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@">
@@ -28,7 +28,7 @@
         <meta name="twitter:url" content="index.html">
         <meta name="twitter:title" content="Hanni Abu // Developer">
         <meta name="twitter:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
-        <meta name="twitter:image" content="images/ha-logo.gif">
+        <meta name="twitter:image" content="images/ha-logo.png">
 </head>
 <body>
 <div class="black"></div>
