commented out font and jquery referency and added png icon

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+		<!-- <link href='fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'> -->
+		<!-- <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no"> -->
 		<title>Hanni Abu // Developer</title>
 		<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
-		<script type="text/javascript" src="tools/jquery.min.js"></script> 
-		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+		<!-- <script type="text/javascript" src="tools/jquery.min.js"></script> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 		<link rel="icon" type="image/gif" href="images/ha-logo.gif" />
-
+		
 		<meta charset="utf-8">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> -->
         <meta name="description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
         <meta name="author" content="Hanni Abukhater">
 		<meta name="robots" content="index,follow,archive">
@@ -43,7 +43,7 @@
 	<div id="footer">
 		<div>
 		<a class="button" href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
-		<h2><br><br>hanniabu@gmail.com</h2>
+		<h2><br><br>hanniabu@gmail.com<br><br></h2>
 		<!-- <ul class="social">
 			<li class="facebook"><a href="#"></li>
 			<li class="twitter"><a href="#"></li>
