--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		<h2><strong class="sep-one"></strong>Portfolio Coming Soon<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>My name is <span><strong>Hanni Abukhater</strong></span>.</p><p>I am an aspiring front-end developer.</p>
+		<p>My name is <span><strong>Hanni Abukhater</strong></span>.</p><p>I am a web developer.</p>
 	</div>
 	<div id="footer">
 		<div>
-		<a class="button" href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
+		<a class="button"  href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
 		<h2><br><br>hanniabu@gmail.com<br><br></h2>
 		<!-- <ul class="social">
 			<li class="facebook"><a href="#"></li>
