--- a/projects/stereoscopic/index.html
+++ b/projects/stereoscopic/index.html
@@ -5,6 +5,7 @@
 		<title>Dual Video VR Player</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+        <meta name="mobile-web-app-capable" content="yes">
 		<script type="text/javascript" src="script.js"></script>
 		
 </head>
