--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -221,7 +221,7 @@
 								<div class="side-left">									
 										<img src="assets/img/about-carousel/04.jpg" alt="">							
 									<div class="info">
-										<h4>Jacob Konkarne</h4>
+										<h4>Jacob Hill</h4>
 										<p>Co-Founder</p>
 									</div>
 								</div>
