--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -580,7 +580,7 @@
 		  <!-- </div> -->
 		</section>
 
-<form action="http://formspree.io/info.furryadventures@gmail.com" method="post">
+<form action="https://formspree.io/info.furryadventures@gmail.com" method="post">
     <input type="text" name="name" placeholder="name">
     <input type="email" name="_replyto" placeholder="email">
     <input type="submit" value="Send">
