--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -584,6 +584,8 @@
     <input type="text" name="name" placeholder="name">
     <input type="email" name="_replyto" placeholder="email">
     <input type="submit" value="Send">
+    <input type="text" name="_replyto" placeholder="Your email" />
+
 </form>
 
 
