--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -583,9 +583,11 @@
 <form action="https://formspree.io/info.furryadventures@gmail.com" method="post">
     <input type="text" name="name" placeholder="name">
     <input type="email" name="_replyto" placeholder="email">
+    <input type="hidden" name="_next" value="//site.io/thanks.html" />
+    <input type="hidden" name="_subject" value="Contact Form Submission" />
+    <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
+    <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
-    <input type="text" name="_replyto" placeholder="Your email" />
-
 </form>
 
 
