--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -535,6 +535,7 @@
 
 
 		
+		<!-- ==== CONTACT ==== -->
 		<section id="contact">
 			<div class="row">
 				<br>
@@ -549,7 +550,7 @@
 			  <div class="row">
 				<div class="contact-form">
 				  <!-- <form role="form" method="post"> -->
-				  <!-- <form action="http://formspree.io/info.furryadventures@gmail.com">
+				  <form action="https://formspree.io/info.furryadventures@gmail.com" method="post">
 					<div class="col-sm-6 col-md-6">
 						<div class="controls">
 							<input class="contact_input" type="text" name="name" placeholder="Name">
@@ -573,14 +574,19 @@
 					<div class="col-sm-6 col-md-12">
 						<p><a type="submit" id="submit" class="btn button" value="Send">Send</a></p>
 					</div>
-				  </form> -->
+					<input type="hidden" name="_next" value="https://formspree.io/thanks" />
+				    <input type="hidden" name="_subject" value="Contact Form Submission" />
+				    <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
+				    <input type="text" name="_gotcha" style="display:none" />
+				  </form>
 				</div>
 			  </div>
 			</div>	
 		  <!-- </div> -->
 		</section>
+		<!-- ==== CONTACT ==== -->
 
-<form action="https://formspree.io/info.furryadventures@gmail.com" method="post">
+<!-- <form action="https://formspree.io/info.furryadventures@gmail.com" method="post">
     <input type="text" name="name" placeholder="name">
     <input type="email" name="_replyto" placeholder="email">
     <input type="hidden" name="_next" value="https://formspree.io/thanks" />
@@ -588,7 +594,7 @@
     <input type="hidden" name="_cc" value="hanniabu@gmail.com" />
     <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
-</form>
+</form> -->
 
 
 
