--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -576,7 +576,7 @@
 					</div>
 					
 					<div class="col-sm-6 col-md-12">
-						<p><a type="submit" id="submit" class="btn button" value="Send">Send</a></p>
+						<p><input type="submit" id="submit" class="btn button" value="Send"></p>
 					</div>
 				
 				  </form>
