--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -769,7 +769,7 @@
 						<h3>Contact Information</h3>
 						<p>
 							<span class="icon icon-mobile"></span>&nbsp&nbsp(973) 634-0404 <br/>
-							<span class="icon icon-envelop"></span><a href="#contact">&nbsp&nbspinfo.furryadventures@gmail.com</a> <br/>
+							<span class="icon icon-envelop"></span>&nbsp&nbsp<a href="#contact">info.furryadventures@gmail.com</a> <br/>
 						</p>
 					</div>
 					<div class="col-md-8">
