updating css and button text

--- a/projects/workouts/index.html
+++ b/projects/workouts/index.html
@@ -41,7 +41,7 @@
 
 
 		<!-- ==== CONTENT ==== -->
-		<div id="wrap">
+		<div id="wrap" class="light-grey">
 			<div class="content container center clear-top">
 				<h1>Select Workout Day</h1>
 
@@ -53,7 +53,7 @@
 				    <option value="full-core">Full Core</option>
 				</select>
 
-				<p><input type="submit" value="Sun Flower" class="flat-button"></p>
+				<p><input type="submit" value="Give It To Me" class="flat-button"></p>
 			</div>
 		</div>
 		<!-- ==== CONTENT ==== -->
