added calc site

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h2><strong class="sep-one"></strong>Portfolio Coming Soon<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>My name is <span><strong>Hanni Abukhater</strong></span>.</p><p>I am a web developer.</p>
+		<p>My name is <span><strong>Hanni Abukhater</strong></span>.</p><p>I am a web developer and mechanical engineer.</p>
 	</div>
 	<div id="footer">
 		<div>
