--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="Hanni Abu">
 
 	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
 	<!-- Bootstrap  -->
@@ -50,7 +50,7 @@
 		<!-- Start Header Section -->
 		<header id="header">
 			<nav class="main-navigation navbar-fixed-top" role="navigation">
-				<div class="container">
+				<!-- <div class="container"> -->
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<i class="fa fa-bars fa-lg"></i>
@@ -72,7 +72,7 @@
 						</ul>
 					</div>
 					<!-- End Navigation Menu -->
-				</div>
+				<!-- </div> -->
 			</nav>
 		</header>
 		<!-- End Header Section -->
