add meta tags, contact form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/gif" href="images/ha-logo.gif" />
 		
 		<meta charset="utf-8">
-        <meta name="description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta name="description" content="Hanni Abukhater is a web developer and mechanical engineer living in Clifton, New Jersey.">
         <meta name="author" content="Hanni Abukhater">
 		<meta name="robots" content="index,follow,archive">
         <meta property="og:locale" content="en_us">
@@ -19,7 +19,7 @@
         <meta property="og:url" content="index.html">
         <meta property="og:site_name" content="Hanni Abu // Developer">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta property="og:description" content="Hanni Abukhater is a web developer and mechanical engineer living in Clifton, New Jersey.">
         <meta property="og:image" content="images/ha-logo.png">
         <!-- <meta property="fb:admins" content="100000472617627">
         <meta name="twitter:card" content="summary">
@@ -27,7 +27,7 @@
         <meta name="twitter:creator" content="@"> -->
         <meta name="twitter:url" content="index.html">
         <meta name="twitter:title" content="Hanni Abu // Developer">
-        <meta name="twitter:description" content="Hanni Abukhater is a front-end developer living in Clifton, New Jersey.">
+        <meta name="twitter:description" content="Hanni Abukhater is a web developer and mechanical engineer living in Clifton, New Jersey.">
         <meta name="twitter:image" content="images/ha-logo.png">
 </head>
 <body>
