--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -1,44 +1,50 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="assets/img/logo/logo16.png">
-	<title>Verticulture Farms</title>
-
-	<meta name="description" content="Design - is a Premium HTML5 Responsive Templeate by Graygrids about.">
-
-	<meta name="keywords" content="Startup HTML template, Bootstrap Agency theme, html template, charity template, premium html template, one page template">
-
-	<meta name="author" content="Hanni Abu">
-
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="assets/img/logo/logo16.png">
+	<title>Verticulture Farms | An aquaponics farm in Brooklyn, NY</title>
+	<meta name="description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+	<meta name="keywords" content="aquaponic, rooftop, vertical farming, Brooklyn, NY, custom blend, tilapia, monitoring, technology">
+    <meta name="author" content="Verticulture Farms, LLC">
+	<meta name="robots" content="index,follow,archive">
+    <meta property="og:locale" content="en_us">
+    <meta property="og:title" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta property="og:url" content="index.html">
+    <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+    <meta property="og:image" content="assets/img/logo/logo32.png">
+    <!-- <meta property="fb:admins" content="100000472617627">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@">
+    <meta name="twitter:creator" content="@"> -->
+    <meta name="twitter:url" content="index.html">
+    <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta name="twitter:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+    <meta name="twitter:image" content="assets/img/logo/logo32.png">
+
 
 	<!-- Bootstrap  -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
 	<!-- icon fonts font Awesome -->
 	<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css">
-		
 	<!-- Custom Styles -->
 	<link href="assets/css/style.css" rel="stylesheet"> 
 	<link href="assets/css/presets/custom-color.css" rel="stylesheet"> 
-
 	<!-- Responsive Styles -->
 	<link href="assets/css/responsive.css" rel="stylesheet">
-	
 	<!-- Normalize Styles -->
 	<link href="assets/css/normalize.css" rel="stylesheet">
-
 	<!-- Extras -->
 	<link rel="stylesheet" type="text/css" href="assets/extras/animate.css">
 	<link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css">
 	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.theme.css">
 	<link rel="stylesheet" type="text/css" href="assets/extras/owl/owl.transitions.css">
-
-	
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -374,7 +380,8 @@
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Contact</span> Us</h1>
 					<div class="row">
 						<div class="contact-form">
-							<form role="form" method="post">
+							<!-- <form role="form" method="post"> -->
+							<form action="https://formspree.io/verticulturefarms@gmail.com" method="post">
 								<div class="col-sm-6 col-md-6 wow fadeInLeft" data-wow-delay="0.2s">
 										<div class="controls">
 											<input class="contact_input" type="text" name="name" placeholder="Name">
@@ -382,28 +389,36 @@
 											<br><br>
 										</div>
 										<div class="controls">
-											<input class="contact_input" type="text" name="Email" placeholder="Email">
+											<input class="contact_input" type="email" name="_replyto" placeholder="Email">
 											<i class="fa fa-envelope-o"></i>
 											<br><br>											
 										</div>
 										<div class="controls">
-											<input class="contact_input" type="text" name="Phone" placeholder="Phone">
+											<input class="contact_input" type="text" name="phone" placeholder="Phone">
 											<i class="fa fa-phone"></i>
 										</div>
 								</div>
 
 								<div class="col-sm-6 col-md-6 wow fadeInRight" data-wow-delay="0.2s">
-										<textarea name="massage" rows="7" class="form-control" placeholder="Massage"></textarea>
+										<textarea name="message" rows="7" class="form-control" placeholder="Message"></textarea>
 								</div>
 								<div class="col-sm-6 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-									<button type="submit" id="submit" class="btn btn-common">Send</button>
+									<button type="submit" id="submit" class="btn btn-common" value="Send">Send</button>
 								</div>
+								<input type="hidden" name="_next" value="https://formspree.io/thanks" />
+							    <input type="hidden" name="_subject" value="Contact Form Submission" />
+							    <input type="hidden" name="_cc" value="hanni.verticulturefarms@gmail.com" />
+							    <input type="text" name="_gotcha" style="display:none" />
 							</form>
 						</div>
 					</div>
 				</div>	
 			</div>
 		</section>
+
+
+
+
 		<!-- End Contact Section -->
 		
 		<!-- Start Clients Section -->
