update meta pic

--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -12,20 +12,20 @@
     <meta name="author" content="Verticulture Farms, LLC">
 	<meta name="robots" content="index,follow,archive">
     <meta property="og:locale" content="en_us">
-    <meta property="og:title" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta property="og:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta property="og:url" content="index.html">
-    <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta property="og:type" content="website">
     <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
-    <meta property="og:image" content="assets/img/logo/logo32.png">
+    <meta property="og:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg">
     <!-- <meta property="fb:admins" content="100000472617627">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@">
     <meta name="twitter:creator" content="@"> -->
     <meta name="twitter:url" content="index.html">
-    <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn, NY">
+    <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta name="twitter:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
-    <meta name="twitter:image" content="assets/img/logo/logo32.png">
+    <meta name="twitter:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg">
 
 
 	<!-- Bootstrap  -->
