update meta pic

--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta property="og:type" content="website">
     <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
-    <meta property="og:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg">
+    <meta property="og:image" content="assets/img/background/7.jpg">
     <!-- <meta property="fb:admins" content="100000472617627">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@">
@@ -25,7 +25,7 @@
     <meta name="twitter:url" content="index.html">
     <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta name="twitter:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
-    <meta name="twitter:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg">
+    <meta name="twitter:image" content="assets/img/background/7.jpg">
 
 
 	<!-- Bootstrap  -->
