update meta pic

--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -9,20 +9,26 @@
 	<title>Verticulture Farms | An aquaponics farm in Brooklyn, NY</title>
 	<meta name="description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
 	<meta name="keywords" content="aquaponic, rooftop, vertical farming, Brooklyn, NY, custom blend, tilapia, monitoring, technology">
-    <meta name="author" content="Verticulture Farms, LLC">
+	<link rel="canonical" href="https://verticulturefarms.com/" />
 	<meta name="robots" content="index,follow,archive">
+    <meta name="author" content="Verticulture Farms, LLC">
     <meta property="og:locale" content="en_us">
-    <meta property="og:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
-    <meta property="og:url" content="index.html">
-    <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn">
-    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://verticulturefarms.com/">
+    <meta property="og:title" content="Verticulture Farms |title An aquaponics farm in Brooklyn">
+    <meta property="og:site_name" content="Verticulture Farms |sitename An aquaponics farm in Brooklyn">
     <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
-    <meta property="og:image" content="assets/img/background/7.jpg">
+    <meta property="article:author" content="********input facebook profile************need to enable follow" />
+    <meta property="og:type" content="website">
+    <!-- <meta property="og:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg"> -->
+    <meta property="og:image:secure_url" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg">
+	<meta property="og:image:type"       content="image/jpg">
+	<meta property="og:image:width"      content="2310">
+	<meta property="og:image:height"     content="1536">
     <!-- <meta property="fb:admins" content="100000472617627">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@">
     <meta name="twitter:creator" content="@"> -->
-    <meta name="twitter:url" content="index.html">
+    <meta name="twitter:url" content="https://verticulturefarms.com/">
     <meta name="twitter:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
     <meta name="twitter:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
     <meta name="twitter:image" content="assets/img/background/7.jpg">
