update meta pic

--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -6,17 +6,17 @@
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="assets/img/logo/logo16.png">
-	<title>Verticulture Farms | An aquaponics farm in Brooklyn, NY</title>
-	<meta name="description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+	<title>Verticulture Farms |plaititle An aquaponics farm in Brooklyn, NY</title>
+	<meta name="description" content="pdWe grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
 	<meta name="keywords" content="aquaponic, rooftop, vertical farming, Brooklyn, NY, custom blend, tilapia, monitoring, technology">
 	<link rel="canonical" href="https://verticulturefarms.com/" />
 	<meta name="robots" content="index,follow,archive">
-    <meta name="author" content="Verticulture Farms, LLC">
+    <meta name="author" content="paVerticulture Farms, LLC">
     <meta property="og:locale" content="en_us">
     <meta property="og:url" content="https://verticulturefarms.com/">
     <meta property="og:title" content="Verticulture Farms |title An aquaponics farm in Brooklyn">
     <meta property="og:site_name" content="Verticulture Farms |sitename An aquaponics farm in Brooklyn">
-    <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+    <meta property="og:description" content="odWe grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
     <meta property="article:author" content="********input facebook profile************need to enable follow" />
     <meta property="og:type" content="website">
     <!-- <meta property="og:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg"> -->
