--- a/projects/game/index.html
+++ b/projects/game/index.html
@@ -46,7 +46,7 @@
 	    			<div id="pasteValue" class="right-block">1</div>
     			</div>
 
-    			<div class="row">
+    			<div class="row scoreboard">
 					<div id="counter">1</div>
     			</div>
 
