--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -6,17 +6,17 @@
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="assets/img/logo/logo16.png">
-	<title>Verticulture Farms |plaititle An aquaponics farm in Brooklyn, NY</title>
-	<meta name="description" content="pdWe grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+	<title>Verticulture Farms | An aquaponics farm in Brooklyn, NY</title>
+	<meta name="description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
 	<meta name="keywords" content="aquaponic, rooftop, vertical farming, Brooklyn, NY, custom blend, tilapia, monitoring, technology">
 	<link rel="canonical" href="https://verticulturefarms.com/" />
 	<meta name="robots" content="index,follow,archive">
-    <meta name="author" content="paVerticulture Farms, LLC">
+    <meta name="author" content="Verticulture Farms, LLC">
     <meta property="og:locale" content="en_us">
     <meta property="og:url" content="https://verticulturefarms.com/">
-    <meta property="og:title" content="Verticulture Farms |title An aquaponics farm in Brooklyn">
-    <meta property="og:site_name" content="Verticulture Farms |sitename An aquaponics farm in Brooklyn">
-    <meta property="og:description" content="odWe grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
+    <meta property="og:title" content="Verticulture Farms | An aquaponics farm in Brooklyn">
+    <meta property="og:site_name" content="Verticulture Farms | An aquaponics farm in Brooklyn">
+    <meta property="og:description" content="We grow tilapia and custom blend herbs locally in a vertical aquaponic farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, NY.">
     <meta property="article:author" content="********input facebook profile************need to enable follow" />
     <meta property="og:type" content="website">
     <!-- <meta property="og:image" content="https://hanniabu.com/projects/verticulture/assets/img/background/7.jpg"> -->
@@ -62,7 +62,7 @@
 		<!-- Start Header Section -->
 		<header id="header">
 			<nav class="main-navigation navbar-fixed-top" role="navigation">
-				<!-- <div class="container"> -->
+				<div class="container"><!--causes whitespace on right in mobile-->
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<i class="fa fa-bars fa-lg"></i>
@@ -84,7 +84,7 @@
 						</ul>
 					</div>
 					<!-- End Navigation Menu -->
-				<!-- </div> -->
+				</div>
 			</nav>
 		</header>
 		<!-- End Header Section -->
@@ -298,7 +298,7 @@
 			
 		
 		<!-- Start Why chose us Section -->
-		<!-- <section id="why-chose">
+		<section id="why-chose">
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Why</span> Chose</h1>
 				<div class="row">
@@ -336,9 +336,9 @@
 						</div>
 					</div>
 					<div class="col-md-4 wow fadeInUp" data-wow-offset="10"  data-wow-delay="0.3s">
-						<div class="showcase-box"> -->
+						<div class="showcase-box">
 							<!-- <img src="assets/img/why.png" alt=""> -->
-						<!-- </div>
+						</div>
 					</div>
 					<div class="col-md-4 wow fadeInRight" data-wow-offset="10" data-wow-delay="0.5s">
 						<div class="content-right">
@@ -375,7 +375,7 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<!-- End Why chose us Section  -->
 
 		
