--- a/projects/game/index.html
+++ b/projects/game/index.html
@@ -5,18 +5,15 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
 	    <link rel="shortcut icon" href="assets/img/favicon.png">
 	    <title> Copy & Paste</title>
-	    <!-- Bootstrap core CSS -->
+
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	    <!-- Custom styles for this template -->
 	    <link href="assets/css/main.css" rel="stylesheet">
-	    <!-- <link rel="stylesheet" href="assets/css/icomoon.css"> -->
-	    <link href="assets/css/animate-custom.css" rel="stylesheet">
-	    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+	    <!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'> -->
 	    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>-->
+	    <script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="assets/js/main.js"></script>
   </head>
+
   <body data-spy="scroll" data-offset="0" data-target="#navbar-main">
 
 	<!-- ==== NAVBAR ==== -->
@@ -42,7 +39,7 @@
     			</div>
 
 				<div class="row">
-	    			<div id="time" class="left-block">0:15</div>
+	    			<div id="time" class="left-block">0:10</div>
 	    			<div id="pasteValue" class="right-block">1</div>
     			</div>
 
@@ -51,7 +48,7 @@
     			</div>
 
     			<div class="row record">
-					<div>High Score: <span id="highscore">1</span></div>
+					<div>High Score: <span id="highscore">0</span></div>
     			</div>
 
 				<p id="buttons" class="center">
@@ -80,8 +77,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
-	<!--<script type="text/javascript" src="assets/js/jquery-func.js"></script>-->
+	<script type="text/javascript" src="assets/js/jquery-func.js"></script>-->
   </body>
