full push - timeup message, js clean ip, shrink copybutton

--- a/projects/game/index.html
+++ b/projects/game/index.html
@@ -52,13 +52,14 @@
 		<div id="scoreboard">
 			<div id="counter">1</div>
 			<div id="newHighscoreMessage">New High Score!</div>
+			<div id="timesUp">Time's Up!</div>
 		</div>
 		<!-- <div  id="start">
 			<img src="assets/img/start128.png" class="start" onclick="clickStart()">
 		</div> -->
 		<div id="start" onclick="clickStart()">
-			<div id="play2"></div> 
-			<div id="play3"></div>
+			<div id="start2"></div> 
+			<div id="start3"></div>
 		</div>
 	</div>
 	<!-- ==== CENTER ==== -->
