full push, copybutton shrinks and resizes at reset

--- a/projects/game/index.html
+++ b/projects/game/index.html
@@ -67,11 +67,11 @@
 \
 	<!-- ==== FOOTER ==== -->
 	<div class="copy">
-		<input id="copy" type="submit" value="Copy" class="flat-button">
+		<button id="copy" class="flat-button">Copy</button>
 	</div>
 
 	<div class="footer">
-		<input id="paste" type="submit" value="Paste" class="flat-button">
+		<button id="paste" class="flat-button">Paste</button>
 	</div>
 	<!-- ==== FOOTER ==== -->
 <!-- ==== CONTENT ==== -->
