full push - screen flash, copybuttoneffects

--- a/projects/game/index.html
+++ b/projects/game/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</div>
-		<div>High Score: <span id="highscore">0</span></div>
+		<div id="topScore" >High Score: <span id="highscore">0</span></div>
 		<hr>
 	<!-- ==== HEADER ==== -->
 
@@ -64,7 +64,7 @@
 	</div>
 	<!-- ==== CENTER ==== -->
 
-\
+
 	<!-- ==== FOOTER ==== -->
 	<div class="copy">
 		<button id="copy" class="flat-button">Copy</button>
@@ -81,6 +81,7 @@
 	<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
 	<!-- <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.minjs"></script> -->
 
 	<script type="text/javascript" src="assets/js/main.js"></script>
