updated resume and dl link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</div>
 	<div id="footer">
 		<div>
-		<a class="button"  href="Hanni Abukhater Resume.pdf" style="text-decoration: none" download>Download Resume</a>
+		<a class="button"  href="Hanni Abu Resume.pdf" style="text-decoration: none" download>Download Resume</a>
 		<h2><br><br>hanniabu@gmail.com<br><br></h2>
 		<!-- <ul class="social">
 			<li class="facebook"><a href="#"></li>
