--- a/projects/verticulture/index.html
+++ b/projects/verticulture/index.html
@@ -298,7 +298,7 @@
 			
 		
 		<!-- Start Why chose us Section -->
-		<section id="why-chose">
+		<!-- <section id="why-chose">
 			<div class="container">
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Why</span> Chose</h1>
 				<div class="row">
@@ -336,9 +336,9 @@
 						</div>
 					</div>
 					<div class="col-md-4 wow fadeInUp" data-wow-offset="10"  data-wow-delay="0.3s">
-						<div class="showcase-box">
+						<div class="showcase-box"> -->
 							<!-- <img src="assets/img/why.png" alt=""> -->
-						</div>
+						<!-- </div>
 					</div>
 					<div class="col-md-4 wow fadeInRight" data-wow-offset="10" data-wow-delay="0.5s">
 						<div class="content-right">
@@ -375,7 +375,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- End Why chose us Section  -->
 
 		
@@ -383,7 +383,7 @@
 		<section id="contact">
 			<div class="overlay">
 				<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Contact</span> Us</h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span id='contant-title'>Contact</span> Us</h1>
 					<div class="row">
 						<div class="contact-form">
 							<!-- <form role="form" method="post"> -->
